# PF_Desafio2

./: .replit  CHANGELOG.md  PFDesafio2  PFDesafio2.cabal  result
app/: JogoMoedas.hs  Main.hs
