cabal-version:      2.4
name:               PFDesafio2
version:            0.1.0.0

extra-source-files: CHANGELOG.md

executable PFDesafio2
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: JogoMoedas

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base
                    , containers
                    , split
                    , ansi-terminal
                    , array
    hs-source-dirs:   app
    default-language: Haskell2010

    ghc-options:
        -O2
        -- -threaded
        -- -fprof-auto
        -- "-with-rtsopts=-p -s -h -i0.1"
        -- "-with-rtsopts=-N"
